[project]
name = "resume-optimizer-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.16",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-huggingface-api>=0.5.0",
    "llama-index-llms-groq>=0.5.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
